# BinanceApi-async

./: .gitignore  Cargo.toml  README.md
examples/: data_collector.rs  main.rs
src/: error.rs  historical.rs  lib.rs  main.rs  messages.rs  symbol.rs
